--- a/darzelis-react/package.json
+++ b/darzelis-react/package.json
@@ -17,6 +17,7 @@
     "popper.js": "1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-input-checkbox": "^0.1.6",
     "react-inputs-validation": "^4.6.3",
     "react-joi-validation": "^1.7.0",
     "react-router": "5.2.0",
