--- a/darzelis-react/package.json
+++ b/darzelis-react/package.json
@@ -10,22 +10,19 @@
     "axios": "^0.21.1",
     "bootstrap": "4.5.3",
     "email-validator": "^2.0.4",
-    "formik": "^2.2.6",
     "joi-browser": "^13.4.0",
     "jquery": "3.5.1",
     "lodash": "^4.17.20",
     "popper.js": "1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-input-checkbox": "^0.1.6",
     "react-inputs-validation": "^4.6.3",
-    "react-joi-validation": "^1.7.0",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "validator": "^13.5.2",
-    "web-vitals": "0.2.4",
-    "yup": "^0.32.8"
+    "web-vitals": "0.2.4"
+   
   },
   "scripts": {
     "start": "react-scripts start",
