--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.1",
     "react-inputs-validation": "^4.6.3",
     "react-joi-validation": "^1.7.0",
+    "react-modal": "^3.12.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.4",
