--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -9,17 +9,21 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "4.5.3",
+    "date-fns": "^2.17.0",
     "email-validator": "^2.0.4",
     "formik": "^2.2.6",
     "joi-browser": "^13.4.0",
     "jquery": "3.5.1",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "popper.js": "1.16.1",
     "react": "^17.0.1",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-inputs-validation": "^4.6.3",
     "react-joi-validation": "^1.7.0",
     "react-modal": "^3.12.1",
+    "react-moment": "^1.1.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.4",
