--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.2.6",
     "joi-browser": "^13.4.0",
     "jquery": "3.5.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "popper.js": "1.16.1",
     "react": "^17.0.1",
@@ -22,6 +23,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.4",
+    "react-select": "^4.1.0",
     "validator": "^13.5.2",
     "web-vitals": "0.2.4",
     "yup": "^0.32.8"
