--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "bootstrap": "4.5.3",
     "date-fns": "^2.17.0",
+    "datepicker": "^0.0.0",
     "email-validator": "^2.0.4",
     "formik": "^2.2.6",
     "joi-browser": "^13.4.0",
