--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -29,7 +29,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.4",
-    "react-select": "^4.1.0",
+    "react-select": "3.1.0",
     "validator": "^13.5.2",
     "web-vitals": "0.2.4",
     "yup": "^0.32.8"
