--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -17,6 +17,7 @@
     "jquery": "3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
+    "mdbreact": "^5.0.1",
     "moment": "^2.29.1",
     "popper.js": "1.16.1",
     "react": "^17.0.1",
