--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,9 +19,11 @@
     "jquery": "3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
+    "material-ui": "^0.20.2",
     "moment": "^2.29.1",
     "popper.js": "1.16.1",
     "react": "^17.0.1",
+    "react-data-table-component": "^6.11.7",
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-inputs-validation": "^4.6.3",
@@ -30,6 +34,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.4",
     "react-select": "3.1.0",
+    "styled-components": "^5.2.1",
     "validator": "^13.5.2",
     "web-vitals": "0.2.4",
     "yup": "^0.32.8"
