Bean-178 ChildrenQueue with filters and sorts and paging + BEAN-176 startStopbuttons + updated Edu dashboard with information cards

--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -15,6 +15,7 @@
     "datepicker": "^0.0.0",
     "email-validator": "^2.0.4",
     "formik": "^2.2.6",
+    "idle-timer": "^1.2.0",
     "joi-browser": "^13.4.0",
     "jquery": "3.5.1",
     "js-cookie": "^2.2.1",
@@ -26,6 +27,7 @@
     "react-data-table-component": "^6.11.7",
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
+    "react-idle-timer": "^4.5.5",
     "react-inputs-validation": "^4.6.3",
     "react-joi-validation": "^1.7.0",
     "react-modal": "^3.12.1",
