--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "4.5.3",
+    "chart.js": "^2.9.4",
     "date-fns": "^2.17.0",
     "datepicker": "^0.0.0",
     "email-validator": "^2.0.4",
@@ -25,6 +26,7 @@
     "moment": "^2.29.1",
     "popper.js": "1.16.1",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-data-table-component": "^6.11.7",
     "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
