--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -25,6 +25,7 @@
     "mdbreact": "^5.0.1",
     "moment": "^2.29.1",
     "popper.js": "1.16.1",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-data-table-component": "^6.11.7",
