naudojimosi instrukcija pdf

--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -36,6 +36,7 @@
     "react-joi-validation": "^1.7.0",
     "react-modal": "^3.12.1",
     "react-moment": "^1.1.1",
+    "react-pdf": "^5.2.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.4",
