--- a/frontas-darzelis/package.json
+++ b/frontas-darzelis/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bootstrap": "4.5.3",
     "chart.js": "^2.9.4",
+    "chartjs-plugin-zoom": "^0.7.7",
     "date-fns": "^2.17.0",
     "datepicker": "^0.0.0",
     "email-validator": "^2.0.4",
